Se sube archivo .gitignore

--- a/src/app/configuracion-nicho/config-general/config-general.component.html
+++ b/src/app/configuracion-nicho/config-general/config-general.component.html
@@ -28,7 +28,7 @@
         <span>name: {{fuente.name}}</span>
     </div>
 
-    <button mat-raised-button>Subir archivos proyecto</button>
+    <button mat-raised-button (click)="subirArchivos()">Subir archivos proyecto</button>
     <button mat-raised-button>Adjuntar logo del sitio</button>
     <button mat-raised-button>Adjuntar icon del sitio</button>
 </div>
