--- a/src/app/configuracion-nicho/configuracion-nicho.component.html
+++ b/src/app/configuracion-nicho/configuracion-nicho.component.html
@@ -17,7 +17,7 @@
             <span *ngIf="nicho.database?.conexion" style="color: green;">Correcto</span>
         </span>
         <span class="pointer" (click)="idConfiguracion = 2;">Config General del sitio</span>
-        <span class="pointer">Blog</span>
+        <span class="pointer" (click)="idConfiguracion = 3;">Blog</span>
         <span class="pointer">Menu</span>
         <span class="pointer">Footer</span>
         <span class="pointer">Config FTP para subida de archivos</span>    
@@ -26,6 +26,7 @@
     <ng-container [ngSwitch]="idConfiguracion">
         <app-config-bd [nicho]="nicho" *ngSwitchCase="1" (salir)="idConfiguracion = 0"></app-config-bd>
         <app-config-general [nicho]="nicho" *ngSwitchCase="2" (salir)="idConfiguracion = 0"></app-config-general>
+        <app-config-blog [nicho]="nicho" *ngSwitchCase="3" (salir)="idConfiguracion = 0"></app-config-blog>
     </ng-container> 
 
 
