--- a/src/app/configuracion-nicho/config-blog/config-blog.component.html
+++ b/src/app/configuracion-nicho/config-blog/config-blog.component.html
@@ -1,5 +1,6 @@
 <div fxLayout="column">
     <strong class="font-size-20">Categorias</strong>
+    <strong class="pointer my-20" (click)="salir.emit();">Regresar</strong>
 
     <mat-form-field>
         <mat-label>Nombre Categoria</mat-label>
