--- a/src/app/configuracion-nicho/config-blog/config-blog.component.html
+++ b/src/app/configuracion-nicho/config-blog/config-blog.component.html
@@ -20,7 +20,7 @@
     <mat-checkbox [(ngModel)]="categoria.home">Home</mat-checkbox>
 
     <div fxLayout="column" class="mb-20" fxLayoutAlign="center end">
-        <button mat-raised-button (click)="guardarCategoria()">guardar</button>
+        <button mat-raised-button (click)="guardarCategoria()">Guardar</button>
     </div>
     <div fxLayout="column">
         <table border="1">
