Se suben ajustes generales.

--- a/src/app/configuracion-nicho/config-blog/nota-home/nota-home.component.html
+++ b/src/app/configuracion-nicho/config-blog/nota-home/nota-home.component.html
@@ -28,7 +28,8 @@
 
 </div>
 <mat-divider></mat-divider>
-<div fxLayout="column" class="mt-20">
+<h2>Datos del buscador</h2>
+<div fxLayout="column" class="mt-20" *ngIf="buscador.noticias_style1">
     <mat-form-field>
         <mat-label>Titulo:</mat-label>
         <input matInput [(ngModel)]="buscador.noticias_style1.title" placeholder="Titulo">
